--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
             <li><a href="#skills">Skills</a></li>
             <li><a href="#problem-solving">Achievements</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="https://drive.google.com/file/d/1-2ADr727SNJAl7BZoj2D8jjxVR_4r4eo/view?usp=sharing" target="_blank">CV</a></li>
         </ul>
     </nav>
 
@@ -256,7 +257,7 @@
             </p>
 
             <p style="margin: 1rem 0;">
-                My research spans multiple domains including Streaming data analysis and classification, AI for healthcare, and Quantum-DNA computing. I have published in reputable journal and conferences including Applied Intelligence, Healthcare Analytics and ICAEEE. My Bachelor's thesis was supervised by Dr. Md Manjur Ahmed and Master's thesis by Dr. Rahat Hossain Faisal. I have also collaborated with researchers from other institutions, contributing to quantum-DNA and DNA-quantum project under the guidance of Prof. Dr. Hafiz Md. Hasan Babu.
+                My research spans multiple domains including Streaming data analysis and classification, AI for healthcare, and Quantum-DNA computing. I have published in reputable journal and conferences including Applied Intelligence, Healthcare Analytics and ICAEEE. My Bachelor's thesis was supervised by <a href="https://bu.ac.bd/view-profile.php?editId=365" target="_blank">Dr. Md Manjur Ahmed</a> and Master's thesis by <a href="https://bu.ac.bd/view-profile.php?editId=105" target="_blank">Dr. Rahat Hossain Faisal</a>. I have also collaborated with researchers from other institutions, contributing to quantum-DNA and DNA-quantum project under the guidance of <a href="https://www.du.ac.bd/faculty/faculty_details/CSE/1930" target="_blank">Prof. Dr. Hafiz Md. Hasan Babu</a>.
             </p>
 
             <p style="margin: 1rem 0;">
@@ -427,6 +428,14 @@
                             <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"/>
                         </svg>
                         Facebook
+                    </a>
+                    <a href="YOUR_GOOGLE_SCHOLAR_URL" target="_blank" class="contact-item">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M12 2L2 12l10 10 10-10L12 2z"/>
+                            <path d="M9.5 9v6h5"/>
+                            <path d="M9.5 12h5"/>
+                        </svg>
+                        Google Scholar
                     </a>
                 </div>
                 <p>&copy; Copyright 2024 Sajal Debnath. All rights reserved.</p>
