--- a/index.html
+++ b/index.html
@@ -253,11 +253,11 @@
             <h1>Sajal Debnath</h1>
             <p><i>Research enthusiast & Software Engineer</i></p>
             <p style="margin: 1rem 0;">
-                I am a researcher specializing in Artificial Intelligence (AI), Machine Learning (ML), and Healthcare Analytics, with a particular focus on streaming data analysis and fuzzy systems. I completed my M.Sc. in Computer Science and Engineering at the University of Barishal in 2024, where I also earned my Bachelor's degree in 2022.
+                I am a researcher specializing in Artificial Intelligence (AI), Machine Learning (ML), and Healthcare Analytics, with a specific focus on streaming data analysis and fuzzy systems. I completed my M.Sc. in Computer Science and Engineering at the University of Barishal in 2024, where I also earned my Bachelor's degree in 2022.
             </p>
 
             <p style="margin: 1rem 0;">
-                My research spans multiple domains including Streaming data analysis and classification, AI for healthcare, and Quantum-DNA computing. I have published in reputable journal and conferences including Applied Intelligence, Healthcare Analytics and ICAEEE. My Bachelor's thesis was supervised by <a href="https://bu.ac.bd/view-profile.php?editId=365" target="_blank">Dr. Md Manjur Ahmed</a> and Master's thesis by <a href="https://bu.ac.bd/view-profile.php?editId=105" target="_blank">Dr. Rahat Hossain Faisal</a>. I have also collaborated with researchers from other institutions, contributing to quantum-DNA and DNA-quantum project under the guidance of <a href="https://www.du.ac.bd/faculty/faculty_details/CSE/1930" target="_blank">Prof. Dr. Hafiz Md. Hasan Babu</a>.
+                My research covers various domains, including streaming data analysis and classification, AI in healthcare, and quantum DNA computing. I have published in reputable journals and conferences such as Applied Intelligence, Healthcare Analytics, and ICAEEE. I completed my Bachelor's thesis with guidance from <a href="https://bu.ac.bd/view-profile.php?editId=365" target="_blank">Dr. Md Manjur Ahmed</a>. For my Master's thesis, <a href="https://bu.ac.bd/view-profile.php?editId=105" target="_blank">Dr. Rahat Hossain Faisal</a> supervised my work. I also worked with researchers from other institutions. Together, we focused on projects in quantum-DNA and DNA-quantum, under the mentorship of <a href="https://www.du.ac.bd/faculty/faculty_details/CSE/1930" target="_blank">Prof. Dr. Hafiz Md. Hasan Babu</a>.
             </p>
 
             <p style="margin: 1rem 0;">
