--- a/index.html
+++ b/index.html
@@ -253,11 +253,11 @@
             <h1>Sajal Debnath</h1>
             <p><i>Research enthusiast & Software Engineer</i></p>
             <p style="margin: 1rem 0;">
-                I am a researcher specializing in Artificial Intelligence (AI), Machine Learning (ML), and Healthcare Analytics, with a specific focus on streaming data analysis and fuzzy systems. I completed my M.Sc. in Computer Science and Engineering at the University of Barishal in 2024, where I also earned my Bachelor's degree in 2022.
+                I am a researcher specializing in Artificial Intelligence (AI), Machine Learning (ML), and Healthcare Analytics, with a particular focus on streaming data analysis and fuzzy systems. I completed my M.Sc. in Computer Science and Engineering at the University of Barishal in 2024, where I also earned my Bachelor's degree in 2022.
             </p>
 
             <p style="margin: 1rem 0;">
-                My research covers various domains, including streaming data analysis and classification, AI in healthcare, and quantum DNA computing. I have published in reputable journals and conferences such as Applied Intelligence, Healthcare Analytics, and ICAEEE. I completed my Bachelor's thesis with guidance from <a href="https://bu.ac.bd/view-profile.php?editId=365" target="_blank">Dr. Md Manjur Ahmed</a>. For my Master's thesis, <a href="https://bu.ac.bd/view-profile.php?editId=105" target="_blank">Dr. Rahat Hossain Faisal</a> supervised my work. I also worked with researchers from other institutions. Together, we focused on projects in quantum-DNA and DNA-quantum, under the mentorship of <a href="https://www.du.ac.bd/faculty/faculty_details/CSE/1930" target="_blank">Prof. Dr. Hafiz Md. Hasan Babu</a>.
+                My research spans multiple domains including Streaming data analysis and classification, AI for healthcare, and Quantum-DNA computing. I have published in reputable journal and conferences including Applied Intelligence, Healthcare Analytics and ICAEEE. My Bachelor's thesis was supervised by <a href="https://bu.ac.bd/view-profile.php?editId=365" target="_blank">Dr. Md Manjur Ahmed</a> and Master's thesis by <a href="https://bu.ac.bd/view-profile.php?editId=105" target="_blank">Dr. Rahat Hossain Faisal</a>. I have also collaborated with researchers from other institutions, contributing to quantum-DNA and DNA-quantum project under the guidance of <a href="https://www.du.ac.bd/faculty/faculty_details/CSE/1930" target="_blank">Prof. Dr. Hafiz Md. Hasan Babu</a>.
             </p>
 
             <p style="margin: 1rem 0;">
@@ -326,19 +326,19 @@
             <div class="publication-item">
                 <h3>Published Papers</h3>
                 <ul>
-                    <li>Enhanced Fuzzy Expert Control for Cancer Chemotherapy Drug Dose Scheduling (Barishal University Journal of Bio-Sciences, <a href="https://bu.ac.bd/uploads/BUJBSV3J2024/05.pdf" target="_blank">paper</a>)</li>
-                    <li>Optimization of Chemotherapy Drug Regimens with Genetic Algorithm and Dose Optimizer (Barishal University Journal of Bio-Sciences, <a href="https://bu.ac.bd/uploads/BUJBSV3J2024/06.pdf" target="_blank">paper</a>)</li>
-                    <li>Multi-objective Optimization and Feedback-based Chemotherapy Drug Scheduling System (ICAEEE 2024, <a href="https://doi.org/10.1109/ICAEEE62219.2024.10561667" target="_blank">paper</a>)</li>
-                    <li>A Modular Fuzzy System for Drug Scheduling in chemotherapy (Healthcare Analytics, <a href="https://doi.org/10.1016/j.health.2023.100139" target="_blank">paper</a>)</li>
-                    <li>Buffer-based Adaptive Fuzzy classifier (Applied Intelligence, <a href="https://doi.org/10.1007/s10489-022-04155-2" target="_blank">paper</a>)</li>
-                    <li>Microcontroller based Robotics Support for Blind People (Barishal University Journal, <a href="https://bu.ac.bd/uploads/BUJ1V5I12/12.%20Md.%20Erfan1.pdf" target="_blank">paper</a>) </li>
+                    <li>Rahat Hossain Faisal, Salma Akter Kakon, <b>Sajal Debnath</b>, Md Minhaj Ul Islam and Silvia Sifath. "Enhanced Fuzzy Expert Control for Cancer Chemotherapy Drug Dose Scheduling." Barishal University Journal of Bio-Sciences, Vol. 3, No. 1. (<a href="https://bu.ac.bd/uploads/BUJBSV3J2024/05.pdf" target="_blank">paper</a>)</li>
+                    <li><b>Sajal Debnath</b>, Rahat Hossain Faisal, Md Minhaj Ul Islam, Silvia Sifath, and Salma Akter Kakon. "Optimization of Chemotherapy Drug Regimens with Genetic Algorithm and Dose Optimizer." Barishal University Journal of Bio-Sciences. Vol. 3, No. 1. (<a href="https://bu.ac.bd/uploads/BUJBSV3J2024/06.pdf" target="_blank">paper</a>)</li>
+                    <li><b>Sajal Debnath</b>, Rahat Hossain Faisal, Md Minhaj Ul Islam, Silvia Sifath, Salma Akter Kakon, and Md Shafiul Alam. "Multi-objective optimization and feedback-based chemotherapy drug scheduling." In 2024 3rd International Conference on Advancement in Electrical and Electronic Engineering (ICAEEE), pp. 1-6. IEEE, 2024. (<a href="https://doi.org/10.1109/ICAEEE62219.2024.10561667" target="_blank">paper</a>)</li>
+                    <li>Rahat Hossain Faisal, <b>Sajal Debnath</b>, Md Minhaj Ul Islam, Silvia Sifath, Salma Akter Kakon, Md Shafiul Alam, and Nazmul Siddique. "A modular fuzzy expert system for chemotherapy drug dose scheduling." Healthcare Analytics 3 (2023): 100139. (<a href="https://doi.org/10.1016/j.health.2023.100139" target="_blank">paper</a>)</li>
+                    <li><b>Sajal Debnath</b>, Md Manjur Ahmed, Samir Brahim Belhaouari, Toshiyuki Amagasa, and Mostafijur Rahman. "Buffer-based adaptive fuzzy classifier." Applied Intelligence 53, no. 11 (2023): 14448-14469. (<a href="https://doi.org/10.1007/s10489-022-04155-2" target="_blank">paper</a>)</li>
+                    <li>Md Erfan, Dipto Singho Dhrubo, <b>Sajal Debnath</b>, Hridoy Roy, Tithi Paul, and Rahat Hossain Faisal. "Microcontroller based Robotics Support for Blind People." Barishal University Journal, Part-1. (<a href="https://bu.ac.bd/uploads/BUJ1V5I12/12.%20Md.%20Erfan1.pdf" target="_blank">paper</a>) </li>
                 </ul>
             </div>
             <div class="publication-item">
                 <h3>Under Review</h3>
                 <ul>
-                    <li>Online Alzheimer's Disease Identification Using Tree-based Self Organizing Fuzzy Stream Data Classifier (IEEE Sensors)</li>
-                    <li>A New Clinically Relevant Multi-drug Cancer Chemotherapy based on Fuzzy Expert System (Computers in Biology and Medicine)</li>
+                    <li><b>Sajal Debnath</b>, Md Manjur Ahmed and Samir Brahim Belhaouari. "Online Alzheimer's Disease Identification Using Tree-based Self Organizing Fuzzy Stream Data Classifier" (IEEE Sensors)</li>
+                    <li><b>Sajal Debnath</b>, Rahat Hossain Faisal and Md Shafiul Alam. "A New Clinically Relevant Multi-drug Cancer Chemotherapy based on Fuzzy Expert System" (Computers in Biology and Medicine)</li>
                 </ul>
             </div>
         </section>
@@ -429,7 +429,7 @@
                         </svg>
                         Facebook
                     </a>
-                    <a href="YOUR_GOOGLE_SCHOLAR_URL" target="_blank" class="contact-item">
+                    <a href="https://scholar.google.com/citations?hl=en&user=Zi30rKgAAAAJ&view_op=list_works&authuser=1&sortby=pubdate" target="_blank" class="contact-item">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M12 2L2 12l10 10 10-10L12 2z"/>
                             <path d="M9.5 9v6h5"/>
