--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
         <a href="#top" class="nav-brand">🏠</a>
         <ul class="nav-menu">
             <li><a href="#education">Education</a></li>
-            <li><a href="#experience">Experience</a></li>
             <li><a href="#publications">Publications</a></li>
+            <li><a href="#experience">Experience</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#problem-solving">Achievements</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -257,7 +257,7 @@
             </p>
 
             <p style="margin: 1rem 0;">
-                My research spans multiple domains including Streaming data analysis and classification, AI for healthcare, and Quantum-DNA computing. I have published in reputable journal and conferences including Applied Intelligence, Healthcare Analytics and ICAEEE. My Bachelor's thesis was supervised by <a href="https://bu.ac.bd/view-profile.php?editId=365" target="_blank">Dr. Md Manjur Ahmed</a> and Master's thesis by <a href="https://bu.ac.bd/view-profile.php?editId=105" target="_blank">Dr. Rahat Hossain Faisal</a>. I have also collaborated with researchers from other institutions, contributing to quantum-DNA and DNA-quantum project under the guidance of <a href="https://www.du.ac.bd/faculty/faculty_details/CSE/1930" target="_blank">Prof. Dr. Hafiz Md. Hasan Babu</a>.
+                My research covers various domains, including streaming data analysis and classification, AI in healthcare, and quantum DNA computing. I have published in reputable journals and conferences such as Applied Intelligence, Healthcare Analytics, and ICAEEE. I completed my Bachelor's thesis with guidance from <a href="https://bu.ac.bd/view-profile.php?editId=365" target="_blank">Dr. Md Manjur Ahmed</a>. For my Master's thesis, <a href="https://bu.ac.bd/view-profile.php?editId=105" target="_blank">Dr. Rahat Hossain Faisal</a> supervised my work. I also worked with researchers from other institutions. Together, we focused on projects in quantum-DNA and DNA-quantum, under the mentorship of <a href="https://www.du.ac.bd/faculty/faculty_details/CSE/1930" target="_blank">Prof. Dr. Hafiz Md. Hasan Babu</a>.
             </p>
 
             <p style="margin: 1rem 0;">
@@ -284,6 +284,28 @@
                 <p>University of Barishal, Bangladesh</p>
                 <p>April, 2022 | CGPA: 3.73/4.00</p>
                 <p><em>Thesis: Buffer-based Adaptive Fuzzy Classifier</em></p>
+            </div>
+        </section>
+
+        <section id="publications">
+            <h2>Publications</h2>
+            <div class="publication-item">
+                <h3>Published Papers</h3>
+                <ul>
+                    <li>Rahat Hossain Faisal, Salma Akter Kakon, <b>Sajal Debnath</b>, Md Minhaj Ul Islam and Silvia Sifath. "Enhanced Fuzzy Expert Control for Cancer Chemotherapy Drug Dose Scheduling." Barishal University Journal of Bio-Sciences, Vol. 3, no. 1 (2024). (<a href="https://bu.ac.bd/uploads/BUJBSV3J2024/05.pdf" target="_blank">paper</a>)</li>
+                    <li><b>Sajal Debnath</b>, Rahat Hossain Faisal, Md Minhaj Ul Islam, Silvia Sifath, and Salma Akter Kakon. "Optimization of Chemotherapy Drug Regimens with Genetic Algorithm and Dose Optimizer." Barishal University Journal of Bio-Sciences. Vol. 3, no. 1 (2024). (<a href="https://bu.ac.bd/uploads/BUJBSV3J2024/06.pdf" target="_blank">paper</a>)</li>
+                    <li><b>Sajal Debnath</b>, Rahat Hossain Faisal, Md Minhaj Ul Islam, Silvia Sifath, Salma Akter Kakon, and Md Shafiul Alam. "Multi-objective optimization and feedback-based chemotherapy drug scheduling." In 2024 3rd International Conference on Advancement in Electrical and Electronic Engineering (ICAEEE), pp. 1-6. IEEE, 2024. (<a href="https://doi.org/10.1109/ICAEEE62219.2024.10561667" target="_blank">paper</a>)</li>
+                    <li>Rahat Hossain Faisal, <b>Sajal Debnath</b>, Md Minhaj Ul Islam, Silvia Sifath, Salma Akter Kakon, Md Shafiul Alam, and Nazmul Siddique. "A modular fuzzy expert system for chemotherapy drug dose scheduling." Healthcare Analytics 3 (2023): 100139. (<a href="https://doi.org/10.1016/j.health.2023.100139" target="_blank">paper</a>)</li>
+                    <li><b>Sajal Debnath</b>, Md Manjur Ahmed, Samir Brahim Belhaouari, Toshiyuki Amagasa, and Mostafijur Rahman. "Buffer-based adaptive fuzzy classifier." Applied Intelligence 53, no. 11 (2023): 14448-14469. (<a href="https://doi.org/10.1007/s10489-022-04155-2" target="_blank">paper</a>)</li>
+                    <li>Md Erfan, Dipto Singho Dhrubo, <b>Sajal Debnath</b>, Hridoy Roy, Tithi Paul, and Rahat Hossain Faisal. "Microcontroller based Robotics Support for Blind People." Barishal University Journal, Part-1 (2018). (<a href="https://bu.ac.bd/uploads/BUJ1V5I12/12.%20Md.%20Erfan1.pdf" target="_blank">paper</a>) </li>
+                </ul>
+            </div>
+            <div class="publication-item">
+                <h3>Under Review</h3>
+                <ul>
+                    <li><b>Sajal Debnath</b>, Md Manjur Ahmed and Samir Brahim Belhaouari. "Online Alzheimer's Disease Identification Using Tree-based Self Organizing Fuzzy Stream Data Classifier" (IEEE Sensors)</li>
+                    <li><b>Sajal Debnath</b>, Rahat Hossain Faisal and Md Shafiul Alam. "A New Clinically Relevant Multi-drug Cancer Chemotherapy based on Fuzzy Expert System" (Computers in Biology and Medicine)</li>
+                </ul>
             </div>
         </section>
 
@@ -317,28 +339,6 @@
                 <p>In Dr. Md Manjur Ahmed's Research Team | September, 2021 - February, 2022</p>
                 <ul>
                     <li>Streaming data analysis and algorithm developments</li>
-                </ul>
-            </div>
-        </section>
-
-        <section id="publications">
-            <h2>Publications</h2>
-            <div class="publication-item">
-                <h3>Published Papers</h3>
-                <ul>
-                    <li>Rahat Hossain Faisal, Salma Akter Kakon, <b>Sajal Debnath</b>, Md Minhaj Ul Islam and Silvia Sifath. "Enhanced Fuzzy Expert Control for Cancer Chemotherapy Drug Dose Scheduling." Barishal University Journal of Bio-Sciences, Vol. 3, No. 1. (<a href="https://bu.ac.bd/uploads/BUJBSV3J2024/05.pdf" target="_blank">paper</a>)</li>
-                    <li><b>Sajal Debnath</b>, Rahat Hossain Faisal, Md Minhaj Ul Islam, Silvia Sifath, and Salma Akter Kakon. "Optimization of Chemotherapy Drug Regimens with Genetic Algorithm and Dose Optimizer." Barishal University Journal of Bio-Sciences. Vol. 3, No. 1. (<a href="https://bu.ac.bd/uploads/BUJBSV3J2024/06.pdf" target="_blank">paper</a>)</li>
-                    <li><b>Sajal Debnath</b>, Rahat Hossain Faisal, Md Minhaj Ul Islam, Silvia Sifath, Salma Akter Kakon, and Md Shafiul Alam. "Multi-objective optimization and feedback-based chemotherapy drug scheduling." In 2024 3rd International Conference on Advancement in Electrical and Electronic Engineering (ICAEEE), pp. 1-6. IEEE, 2024. (<a href="https://doi.org/10.1109/ICAEEE62219.2024.10561667" target="_blank">paper</a>)</li>
-                    <li>Rahat Hossain Faisal, <b>Sajal Debnath</b>, Md Minhaj Ul Islam, Silvia Sifath, Salma Akter Kakon, Md Shafiul Alam, and Nazmul Siddique. "A modular fuzzy expert system for chemotherapy drug dose scheduling." Healthcare Analytics 3 (2023): 100139. (<a href="https://doi.org/10.1016/j.health.2023.100139" target="_blank">paper</a>)</li>
-                    <li><b>Sajal Debnath</b>, Md Manjur Ahmed, Samir Brahim Belhaouari, Toshiyuki Amagasa, and Mostafijur Rahman. "Buffer-based adaptive fuzzy classifier." Applied Intelligence 53, no. 11 (2023): 14448-14469. (<a href="https://doi.org/10.1007/s10489-022-04155-2" target="_blank">paper</a>)</li>
-                    <li>Md Erfan, Dipto Singho Dhrubo, <b>Sajal Debnath</b>, Hridoy Roy, Tithi Paul, and Rahat Hossain Faisal. "Microcontroller based Robotics Support for Blind People." Barishal University Journal, Part-1. (<a href="https://bu.ac.bd/uploads/BUJ1V5I12/12.%20Md.%20Erfan1.pdf" target="_blank">paper</a>) </li>
-                </ul>
-            </div>
-            <div class="publication-item">
-                <h3>Under Review</h3>
-                <ul>
-                    <li><b>Sajal Debnath</b>, Md Manjur Ahmed and Samir Brahim Belhaouari. "Online Alzheimer's Disease Identification Using Tree-based Self Organizing Fuzzy Stream Data Classifier" (IEEE Sensors)</li>
-                    <li><b>Sajal Debnath</b>, Rahat Hossain Faisal and Md Shafiul Alam. "A New Clinically Relevant Multi-drug Cancer Chemotherapy based on Fuzzy Expert System" (Computers in Biology and Medicine)</li>
                 </ul>
             </div>
         </section>
