Updated IELTS band

--- a/index.html
+++ b/index.html
@@ -360,10 +360,10 @@
                     <h3>Software</h3>
                     <ul>
                         <li>Matlab</li>
+                        <li>Pycharm</li>
                         <li>Jupyter Notebook</li>
                         <li>LeTex</li>
                         <li>Tableau</li>
-                        <li>Pycharm</li>
                     </ul>
                 </div>
                 <div>
@@ -374,6 +374,15 @@
                         <li>Critical Thinking</li>
                         <li>Communication</li>
                         <li>Leadership</li>
+                    </ul>
+                </div>
+            </div>
+            <h2 style="padding-top: 35px;">Language Proficiency</h2>
+            <div class="skills-grid">
+                <div>
+                    <ul>
+                        <li>English (IELTS Overall Band <b>6.5</b>; L-7.5, R-6.5, W-6, S-6)</li>
+                        <li>Bangla (Native Speaker)</li>
                     </ul>
                 </div>
             </div>
@@ -389,7 +398,7 @@
                 <li>Participated in Code Samurai Hackathon and Kaggle competitions</li>
             </ul>
 
-            <h2>Certification</h2>
+            <h2 style="padding-top: 35px;">Certification</h2>
             <ul>
                 <li>Meta Database Engineer Professional Certificate</li>
                 <li>IBM Machine Learning Professional Certificate</li>
