--- a/index.html
+++ b/index.html
@@ -349,21 +349,21 @@
                 <div>
                     <h3>Programming</h3>
                     <ul>
-                        <li>Python (Proficient)</li>
+                        <li>Python (PyTorch, TensorFlow)</li>
                         <li>Matlab (Proficient)</li>
                         <li>C/C++ (Contest Programming)</li>
                         <li>SQL (Advanced)</li>
-                        <li>Javascript and JQuery (Professional)</li>
+<!--                         <li>Javascript and JQuery (Professional)</li> -->
                     </ul>
                 </div>
                 <div>
                     <h3>Software</h3>
                     <ul>
                         <li>Matlab</li>
-                        <li>Pycharm</li>
                         <li>Jupyter Notebook</li>
-                        <li>LeTex</li>
+                        <li>Pycharm</li>
                         <li>Tableau</li>
+                        <li>LeTex</li>
                     </ul>
                 </div>
                 <div>
