Open to do collaboration

--- a/index.html
+++ b/index.html
@@ -263,6 +263,9 @@
             <p style="margin: 1rem 0;">
                 My research methodologies include adaptive learning algorithms, fuzzy systems, multi-objective optimization, with applications in healthcare diagnostics and treatment planning. I am particularly interested in developing clinically relevant solutions that bridge the gap between theoretical computer science and practical medical applications.
             </p>
+            <p style="margin: 1rem 0;">
+                <i>I am open to research collaboration and internship / full time opportunities.</i>
+            </p>
         </div>
         <div class="profile-image">
             <!-- Replace with your actual image -->
