--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             <h1>Sajal Debnath</h1>
             <p><i>Research enthusiast & Software Engineer</i></p>
             <p style="margin: 1rem 0;">
-                I am a researcher specializing in Artificial Intelligence (AI), Machine Learning (ML), and Healthcare Analytics, with a particular focus on streaming data analysis and fuzzy systems. I completed my M.Sc. in Computer Science and Engineering at the University of Barishal in 2024, where I also earned my Bachelor's degree in 2022.
+                I am a researcher specializing in Artificial Intelligence (AI), ML/DL, and Healthcare Analytics, with a particular focus on streaming data analysis, fuzzy systems, and Medical imaging. I completed my M.Sc. in Computer Science and Engineering at the University of Barishal in 2024, where I also earned my Bachelor's degree in 2022.
             </p>
 
             <p style="margin: 1rem 0;">
@@ -316,7 +316,7 @@
             </p>
 
             <p style="margin: 1rem 0;">
-                My research methodologies include adaptive learning algorithms, fuzzy systems, multi-objective optimization, with applications in healthcare diagnostics and treatment planning. I am particularly interested in developing clinically relevant solutions that bridge the gap between theoretical computer science and practical medical applications.
+                My research methodologies include adaptive learning algorithms, fuzzy systems, multi-objective optimization and imaging, with applications in healthcare diagnostics and treatment planning. I am particularly interested in developing clinically relevant solutions that bridge the gap between theoretical computer science and practical medical applications.
             </p>
             <p style="margin: 1rem 0;">
                 <I> <b>I am open to research collaboration or full time opportunities. </b> </i>
