--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         </ul>
     </nav>
 
-    <!-- Hero Section with Bio and Image -->
+    <!-- Description Section with Bio and Image -->
     <div class="hero">
         <div class="bio">
             <h1>Sajal Debnath</h1>
